--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <nav>
 
-  <!-- <a routerLink="/login" routerLinkActive="active">login</a> -->
+  <a routerLink="/login" routerLinkActive="active">login</a>
+  <br/>
+  <a routerLink="/customers" routerLinkActive="active">customers</a>
 </nav>
 <router-outlet></router-outlet>
